2008-01-24  Tamas Nepusz  <ntamas@rmki.kfki.hu>

	* interfaces/python/src/graphobject.c : corrected some type
	mismatches that caused erroneous behaviour on 64 bit
	architectures
	
	* interfaces/python/src/graphobject.c : added interface to
	igraphmodule_Graph_permute_vertices
	
	* interfaces/python/package/test/isomorphism.py : added
	test case

2008-01-19  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/layout.c (igraph_layout_kamada_kawai)
	(igraph_layout_kamada_kawai_3d) : support initial position

	* src/motifs.c (igraph_motifs_randesu, igraph_motifs_randesu_estimate)
	(igraph_motifs_randesu_no) : bug fixes

	* src/community.c (igraph_community_leading_eigenvector_step) : rewritten
	* examples/simple/igraph_community_leading_eigenvector.c : updated

2008-01-18  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/structural_properties.c (igraph_pagerank_old) : 'old' argument
	added
	* examples/simple/igraph_pagerank.c : updated

	* src/community.c (igraph_community_leading_eigenvector_naive)
	(igraph_community_leading_eigenvector) : warning if mxiter iterations
	reached

	* src/arpack.c (igraph_arpack_rssolve, igraph_arpack_rnsolve) :
	set output options

2008-01-17  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/community.c (igraph_community_leading_eigenvector) : rewritten
	* examples/simple/igraph_community_leading_eigenvector.c : updated

	* src/arpack.c (igraph_arpack_options_init) : maxiter default is 3000

2008-01-16  Tamas Nepusz  <ntamas@rmki.kfki.hu>

	* src/foreign.c (igraph_read_graph_gml) : GML graphs are now
	considered directed iff they contain a graph attribute
	called 'directed' with value 1 (conforms with the tech
	report but contradicts the draft specification)
	
	* src/centrality.c (igraph_closeness_estimate,
	igraph_betweenness_estimate) : adjacency list views are
	used from now on
	
	* src/structural_properties.c (igraph_shortest_paths) :
	adjacency lists views are used from now on

2008-01-15  Gabor Csardi  <csardi@rmki.kfki.hu>
